--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,118 @@
     padding: 0;
 }
 
+body {
+    background-color: #f1e07b;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+header {
+    padding: 20px;
+}
+
 header > img {
     display: block;
-    width: 360px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50vw;    
+}
+
+/* Nav */
+
+nav {
+    text-align: center;        
+}
+
+nav ul {
+    list-style: none;
+    text-align: center;
+    background-color: rgb(148, 134, 8);
+    display: flex;
+    justify-content: space-evenly;
+    gap: 10px;
+    padding: 5px;   
+    border-radius: 15px;
+        
+}
+
+nav li {
+    display: inline-block;
     
+}
+
+li a {
+    text-decoration: none;
+    color: black;
+    font-weight: 800;
+}
+/* Main */
+
+main {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+/* Section */
+
+section {
+    display: flex;
+}
+
+.promotion {
+    background-image: url(/meta-portfolio/photos/pasta-promo.jpg) ;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    gap: 20px;
+    padding: 20px;
+    border-radius: 20px;
+    min-height: 15vh;
+}
+
+.promotion > h1 {
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.promotion > p {
+    color: white;
+}
+
+article {
+    flex: 1;
+}
+
+/* Card */
+
+.card-container {
+    display: flex;
+    gap: 10px;
+}
+
+.card {
+    background-color: rgb(148, 134, 8);
+    padding: 10px;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+
+footer {
+    display: flex;
+}
+
+footer div {
+    flex: 1;
+}
+
+footer div > img {
+    width: 10vw;
 }
