--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,7 @@ section {
     background-size: cover;      
     display: flex;
     flex-direction: column;
-    justify-content: c;
+    justify-content: center;
     gap: 20px;
     padding: 20px;
     border-radius: 10px;
@@ -147,7 +147,7 @@ article.card > a {
 
 }
     /* Footer */
-    
+
 footer {
     display: flex;
     margin-top: 20px;
